# simple-word-filter

./: LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
src/simple_word_filter/: __init__.py  trie.py  word_filter.py  word_matcher.py
src/simple_word_filter/matchers/: __init__.py  base_matcher.py
src/simple_word_filter/matchers/regex/: __init__.py  regex_matcher.py
src/simple_word_filter/matchers/simple/: __init__.py  simple_matcher.py
src/simple_word_filter/matchers/trie/: __init__.py  trie.py  trie_matcher.py
tests/: run_all_tests.py
tests/simple_word_filter/: test_word_filter.py
