[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "simple_word_filter.__version__"}

[project]
name = "simple-word-filter"
description = "A simple word filtering library for Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version"]
authors = [{ name = "Sparrived", email = "sparrived@outlook.com" }]
maintainers = [{ name = "Sparrived", email = "sparrived@outlook.com" }]
keywords = ["filter", "word", "text", "censor", "profanity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.4.2"]

[project.urls]
Homepage = "https://github.com/Sparrived/simple-word-filter"
Repository = "https://github.com/Sparrived/simple-word-filter"
Issues = "https://github.com/Sparrived/simple-word-filter/issues"
Changelog = "https://github.com/Sparrived/simple-word-filter/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
